# codeflow-py

./: .coverage  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: python-ci.yml
demo/: __init__.py
demo/codeflow_demo/: config.py  gallery.py  io.py  main.py  tracing_gallery.py  usecases.py
scripts/: verify_all.sh
src/code_visualizer/: __init__.py  config.py  graph_view_builder.py
src/code_visualizer/api/: browser_manifest.py
src/code_visualizer/builders/: scalar_artifacts.py  structured_artifacts.py  view_resolution.py  visualization.py
src/code_visualizer/converters/: defaults.py  pipeline.py
tests/: test_step_tracing_filters.py  test_view_builders.py
tests/api/: test_browser_manifest.py
tests/builders/: test_scalar_artifacts.py  test_visualization.py  test_visualization_more.py
tests/converters/: test_converter_pipeline_more.py  test_converters.py
tests/ir/: test_ir_extractor.py  test_ir_extractor_more.py
tests/pipeline/: test_scalar_pipeline.py  test_value_visualization.py  test_value_visualization_more.py
tests/renderers/: test_auto_view.py
tests/rendering/: test_auto_view.py
tests/shared/: test_config.py  test_view_kinds.py
tests/tracing/: test_event_processing.py  test_step_tracing_filters.py  test_trace_manifest.py
tests/utils/: test_config_behavior.py  test_graph_view_helpers.py  test_image_sources.py  test_image_sources_more.py
tests/views/: test_graph_layout.py  test_nested_and_bar.py  test_nested_more.py  test_nodelink_graph.py  test_nodelink_graph_more.py  test_structured_graph.py  test_view_types.py
(+119 files in other folders)
