[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeflow-py"
version = "0.1.0"
description = "CodeFlow Python visualization pipeline for nested Python data structures and traced execution."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "EdCraft Team" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "graphviz>=0.20.3",
    "matplotlib>=3.9.0",
    "networkx>=3.2.1",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "pillow>=10.4.0",
    "step-tracer @ git+https://github.com/edcraft-org/step-tracer.git",
    "query-engine @ git+https://github.com/edcraft-org/query-engine.git",
]

[dependency-groups]
dev = [
    "mypy>=1.12.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.0",
    "ruff>=0.4.8",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "S", "T20", "Q"]
ignore = ["S101", "S102", "E501"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/code_visualizer"]
